fix: make the trace details collapsed sidebar match the design

--- a/frontend/src/container/TraceDetail/TraceDetails.styles.scss
+++ b/frontend/src/container/TraceDetail/TraceDetails.styles.scss
@@ -22,6 +22,8 @@
 	}
 
 	.expand-collapse-btn {
-		margin: 12px 0 0 12px;
+		padding: 4px;
+		height: auto;
+		width: auto;
 	}
 }
